# qtTraits

./: .gitignore  CMakeLists.txt  LICENSE  README.md  appveyor.yml
include/: qt_traits.h
unitTests/: CMakeLists.txt  TestObject.h  main.cpp
